kvx-macros/tests/macro/fail-segment-empty.stderr
error: segments must be nonempty
 --> tests/macro/fail-segment-empty.rs:4:36
  |
4 | const SEGMENT: &Segment = segment!("");
  |                                    ^^
