kvx-macros/tests/macro/fail-segment-empty.rs
use kvx_macros::segment;
use kvx_types::Segment;

const SEGMENT: &Segment = segment!("");

fn main() {}
